--- a/templates/workers.html
+++ b/templates/workers.html
@@ -52,17 +52,23 @@
         <table class="table table-striped table-hover align-middle" id="workers-table">
             <thead class="table-secondary">
                 <tr>
-                    <th>Editar</th>
                     <th>Id</th>
                     <th>Nombre</th>
                     <th>Dependencia</th>
                     <th>Cargo</th>
                     <th>Correo</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
                 </tr>
             </thead>
             <tbody>
                 {% for worker in workers %}
                     <tr>
+                        <td>{{ worker.id }}</td>
+                        <td>{{ worker.nombre }}</td>
+                        <td>{{ worker.dependencia }}</td>
+                        <td>{{ worker.cargo }}</td>
+                        <td>{{ worker.correo }}</td>
                         <td>
                             <button type="button" class="btn btn-primary"
                             data-bs-toggle="modal"
@@ -74,12 +80,15 @@
                             data-bs-email="{{ worker.correo }}">
                             <i class="bi bi-pencil-square"></i>
                         </button>
+                        <td>
+                            <button type="button" class="btn btn-danger"
+                            data-bs-toggle="modal"
+                            data-bs-target="#deleteModal"
+                            data-bs-id="{{ worker.id }}"
+                            data-bs-name="{{ worker.nombre }}">
+                            <i class="bi bi-x-square"></i>
+                        </button>
                         </td>
-                        <td>{{ worker.id }}</td>
-                        <td>{{ worker.nombre }}</td>
-                        <td>{{ worker.dependencia }}</td>
-                        <td>{{ worker.cargo }}</td>
-                        <td>{{ worker.correo }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -91,7 +100,7 @@
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form method="post" action="/edit">
+                <form method="post" action="/edit_worker">
                     <div class="modal-header">
                         <h5 class="modal-title" id="editModalLabel">Editar Trabajador</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -149,6 +158,108 @@
         </div>
     </div>
 
+    <!-- Modal Eliminar Trabajador -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/delete_worker">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Eliminar Trabajador</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" name="id" id="delete-id">
+                        <p>¿Está seguro de que desea eliminar <strong id="delete-name"></strong> de la lista de trabajadores?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <div class="row justify-content-center">
+                            <div class="mb-3">
+                                <label for="delete-worker" class="form-label">Responsable</label>
+                                <select class="form-select" id="delete-worker" name="worker" required>
+                                    <option selected value="">Seleccione una opción</option>
+                                    {% for worker in workers %}
+                                    <option value="{{ worker.id }}">{{ worker.nombre }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="delete-comment" class="form-label">Comentarios</label>
+                                <textarea class="form-control" id="delete-comment" name="comment" placeholder="Agregue una descripción de la edición, si es necesario"></textarea>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-danger">Eliminar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Añadir Trabajador -->
+    <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <form method="post" action="/add_worker">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="addModalLabel">Agregar Trabajador</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-xl-4">
+                                <label for="add-name" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="add-name" name="name" placeholder="ej. Marcador - Pelikan" required>
+                            </div>
+                            <div class="col-xl-1">
+                                <label for="add-branch" class="form-label">Dependencia</label>
+                                <input type="number" class="form-control" id="add-branch" name="branch" value="1" min="1" required>
+                            </div>
+                            <div class="col-xl-2">
+                                <label for="add-package" class="form-label">Cargo</label>
+                                <select class="form-select" id="add-package" name="package" required>
+                                    <option value="">Seleccione</option>
+                                    {% for package in packages %}
+                                    <option value="{{ package.id }}">{{ package.nombre }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="col-xl-2">
+                                <label for="add-location" class="form-label">Correo</label>
+                                <select class="form-select" id="add-location" name="location" required>
+                                    <option value="">Seleccione</option>
+                                    {% for location in locations %}
+                                    <option value="{{ location.id }}">{{ location.nombre }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <div class="col-xl-6 mx-auto">
+                            <div class="col">
+                                <label for="add-worker" class="form-label">Responsable</label>
+                                <select class="form-select" id="add-worker" name="worker" required>
+                                    <option selected value="">Seleccione una opción</option>
+                                    {% for worker in workers %}
+                                    <option value="{{ worker.id }}">{{ worker.nombre }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="col">
+                                <label for="add-comment" class="form-label">Comentarios</label>
+                                <textarea class="form-control" id="add-comment" name="comment" placeholder="Agregue una descripción de la edición, si es necesario"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-xl-3">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-success">Agregar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Scripts JQuery -->
@@ -158,6 +269,7 @@
     <!-- <script src="../DataTables/datatables.min.js"></script> -->
     <!-- Scripts personalizados -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='workersModals.js') }}"></script>
     <script type="module" src="../static/tableData.js"></script>
 </body>
 </html>
